--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -3,6 +3,6 @@
 		"message": "SimpleR"
 	},
     "appDescript": {
-        "message": "A romanizer, definition finder and audio pronunciation helper in the style of SimpleTranslate."
+        "message": "A romanizer/transliterator, definition finder and audio pronunciation helper in the style of SimpleTranslate."
     }
 }
